@dev update blog

--- a/April/04-24.md
+++ b/April/04-24.md
@@ -42,7 +42,9 @@ var a =(function(){
     目前js模块化的解决方案
 > AMD
 
-异步加载依赖，先将依赖全部加载后，在执行，最后再执行主逻辑，优化了体验，没有延迟
+- AMD是在**requirejs**的推广中规范出来
+- 异步加载依赖，所以会有callback,先将依赖全部加载后，在执行，最后再执行主逻辑
+- 依赖前置体现
 
 实现原理：大致上封装了require,define两个函数来管理引入模块，暴露模块
 
@@ -52,9 +54,17 @@ var a =(function(){
 ```
 
 > CMD
+- CMD是在**sea.js**的推广中规范出来
+- 也是异步加载，先加载完毕，需要的时候再去执行，先加载后执行
+- 依赖就近体现
 
-也是异步加载，先加载完毕，需要的时候再去执行，优化了性能
+> commonjs
+- 服务器模块加载规范
+- 同步加载，文件可以缓存在本地磁盘，加载速度快；
+- 通CMD，先加载，需要的时候在执行
+- 加载的模块，属于值拷贝，与原文件脱离关系
 
 > ES6
-
-ES6支持关键字import,export来支持引入和暴露模块
+- ES6支持关键字import,export来支持引入和暴露模块
+- 同AMD规范，先加载，执行完毕
+- 加载的模块，属于引用
